# Trading-Desktop-Rust

./: .gitignore  AGENTS.md  Justfile  README.md  package.json  pnpm-lock.yaml  renovate.json
.github/workflows/: ci.yml
docs/: one-pager.md  repo-context.md
docs/adr/: 0000-template.md  0001-fullstack-hibrido.md  0002-tauri-rust-core-desktop.md  0003-hft-aggtrade-conflation-pipeline.md  0004-low-latency-hotpath-optimization.md  0005-ultra-low-latency-pipeline.md  0006-market-kind-crosshair-persistence.md
docs/architecture/: stack-desktop-tauri-rust-astro.md
docs/worklog/: 2026-02-09-migracion-tauri-rust.md  2026-02-13-hft-aggtrade-pipeline.md  2026-02-18-low-latency-pass-01.md  2026-02-19-latency-max-pass.md  2026-02-21-market-kind-crosshair-persistence.md
frontend/: .env.example  .prettierignore  astro.config.mjs  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
frontend/e2e/: run-e2e.ps1  tsconfig.json  wdio.conf.ts
frontend/public/: theme-init.js
frontend/src/: env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/migrations/: 0001_init.sql  0002_market_preferences_and_drawings.sql
frontend/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
frontend/src-tauri/src/commands/: app_info.rs  health.rs  market_preferences.rs  market_stream.rs  mod.rs
frontend/src-tauri/src/db/: mod.rs
frontend/src-tauri/src/market/: binance.rs  mod.rs  persistence.rs  pipeline.rs  types.rs
scripts/: backend-reset-sqlite.ps1  bootstrap-rust.ps1  meta-verify.ps1
(+21 files in other folders)
